entity_macros/tests/ui/derive/ent/missing-type-for-edge-attr-with-other-attrs.stderr
error: Missing field `type` at my_edge/edge
 --> $DIR/missing-type-for-edge-attr-with-other-attrs.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
